# collection

./: .gitignore  LICENSE  README.md  concurrentSort.go
go/tickler-pattern/: go.mod  main.go
python/: find_duplicates.py
python/fastapi_structure/: Makefile  README.md  main.py  pyproject.toml
python/fastapi_structure/app/config/: database.py
python/fastapi_structure/app/models/: foo.py
python/fastapi_structure/app/routers/: foo.py
python/fastapi_structure/app/services/: foo.py  main.py
python/fastapi_structure/app/utils/: app_exceptions.py  request_exceptions.py  service_result.py
responsive-navbar/: index.html
smooth-scrolling/: index.html  style.css
svelte/login-form-animated/: .gitignore
svelte/login-form-animated/public/: index.html
svelte/login-form-animated/src/: App.svelte
theme-switcher/: app.js  index.html  style.css
vue/autosave-form/: README.md  package.json
vue/autosave-form/public/: index.html
vue/autosave-form/src/: App.vue  firebase.ts  main.ts
vue/autosave-form/src/components/: AutoForm.vue
