[tool.poetry]
name = "fastapi_structure"
version = "0.1.0"
description = ""
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
fastapi = "^0.63.0"
loguru = "^0.5.3"
SQLAlchemy = "^1.3.22"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
